# auto-todo

./: config.yml  pyproject.toml
auto_todo/: __main__.py  config.py  custom.py  parser.py  render.py  sort_it.py  web.py
